--- a/demos/package.json
+++ b/demos/package.json
@@ -10,12 +10,11 @@
     "rollup": "^2.31.0"
   },
   "dependencies": {
-    "@esri/arcgis-rest-auth": "^2.22.0",
-    "@esri/arcgis-rest-feature-layer": "^2.22.0",
-    "@esri/arcgis-rest-portal": "^2.22.0",
-    "@esri/arcgis-rest-request": "^2.22.0",
-    "@esri/arcgis-rest-service-admin": "^2.22.0",
-Imaginary Buffer Line
+    "@esri/arcgis-rest-auth": "2.23.0",
+    "@esri/arcgis-rest-feature-layer": "2.23.0",
+    "@esri/arcgis-rest-portal": "2.23.0",
+    "@esri/arcgis-rest-request": "2.23.0",
+    "@esri/arcgis-rest-service-admin": "2.23.0",
     "@esri/hub-common": "6.20.1",
     "@esri/hub-initiatives": "6.20.1",
     "@esri/hub-sites": "6.20.1",
