--- a/demos/package.json
+++ b/demos/package.json
@@ -7,7 +7,8 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "rollup": "^2.31.0"
+    "rollup": "^2.31.0",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@esri/arcgis-rest-auth": "2.23.0",
