--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,6 +18,7 @@
     "@esri/arcgis-rest-portal": "2.24.0",
     "@esri/arcgis-rest-request": "2.24.0",
     "@esri/arcgis-rest-service-admin": "2.24.0",
+    "@esri/arcgis-rest-types": "2.24.0",
     "@esri/hub-common": "6.20.1",
     "@types/adlib": "^3.0.1",
     "rollup": "^1.22.0",
@@ -29,6 +30,7 @@
     "@esri/arcgis-rest-portal": "2.24.0",
     "@esri/arcgis-rest-request": "2.24.0",
     "@esri/arcgis-rest-service-admin": "2.24.0",
+    "@esri/arcgis-rest-types": "2.24.0",
     "@esri/hub-common": "6.20.1"
   },
   "dependencies": {
