--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -13,24 +13,24 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "2.24.0",
-    "@esri/arcgis-rest-feature-layer": "2.24.0",
-    "@esri/arcgis-rest-portal": "2.24.0",
-    "@esri/arcgis-rest-request": "2.24.0",
-    "@esri/arcgis-rest-service-admin": "2.24.0",
-    "@esri/hub-common": "6.20.1",
-    "@esri/hub-teams": "6.20.1",
+    "@esri/arcgis-rest-auth": "^2.24.0",
+    "@esri/arcgis-rest-feature-layer": "^2.24.0",
+    "@esri/arcgis-rest-portal": "^2.24.0",
+    "@esri/arcgis-rest-request": "^2.24.0",
+    "@esri/arcgis-rest-service-admin": "^2.24.0",
+    "@esri/hub-common": "^6.20.1",
+    "@esri/hub-teams": "^6.20.1",
     "rollup": "^1.22.0",
     "typescript": "^4.0.5"
   },
   "peerDependencies": {
-    "@esri/arcgis-rest-auth": "2.24.0",
-    "@esri/arcgis-rest-feature-layer": "2.24.0",
-    "@esri/arcgis-rest-portal": "2.24.0",
-    "@esri/arcgis-rest-request": "2.24.0",
-    "@esri/arcgis-rest-service-admin": "2.24.0",
-    "@esri/hub-common": "6.20.1",
-    "@esri/hub-teams": "6.20.1"
+    "@esri/arcgis-rest-auth": "^2.24.0",
+    "@esri/arcgis-rest-feature-layer": "^2.24.0",
+    "@esri/arcgis-rest-portal": "^2.24.0",
+    "@esri/arcgis-rest-request": "^2.24.0",
+    "@esri/arcgis-rest-service-admin": "^2.24.0",
+    "@esri/hub-common": "^6.20.1",
+    "@esri/hub-teams": "^6.20.1"
   },
   "dependencies": {
     "@esri/solution-common": "^0.21.4",
