--- a/demos/package.json
+++ b/demos/package.json
@@ -11,15 +11,15 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@esri/arcgis-rest-auth": "2.24.0",
-    "@esri/arcgis-rest-feature-layer": "2.24.0",
-    "@esri/arcgis-rest-portal": "2.24.0",
-    "@esri/arcgis-rest-request": "2.24.0",
-    "@esri/arcgis-rest-service-admin": "2.24.0",
-    "@esri/hub-common": "6.20.1",
-    "@esri/hub-initiatives": "6.20.1",
-    "@esri/hub-sites": "6.20.1",
-    "@esri/hub-teams": "6.20.1",
+    "@esri/arcgis-rest-auth": "^2.24.0",
+    "@esri/arcgis-rest-feature-layer": "^2.24.0",
+    "@esri/arcgis-rest-portal": "^2.24.0",
+    "@esri/arcgis-rest-request": "^2.24.0",
+    "@esri/arcgis-rest-service-admin": "^2.24.0",
+    "@esri/hub-common": "^6.20.1",
+    "@esri/hub-initiatives": "^6.20.1",
+    "@esri/hub-sites": "^6.20.1",
+    "@esri/hub-teams": "^6.20.1",
     "@esri/solution-common": "^0.21.4",
     "@esri/solution-creator": "^0.21.4",
     "@esri/solution-deployer": "^0.21.4",
