--- a/demos/package.json
+++ b/demos/package.json
@@ -8,7 +8,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "rollup": "^2.31.0",
-    "typescript": "^4.0.5"
+    "typescript": "4.0.5"
   },
   "dependencies": {
     "@esri/arcgis-rest-auth": "^2.24.0",
