--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "sri-toolbox": "0.2.0",
     "ts-node": "^8.3.0",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.5",
+    "typescript": "4.0.5",
     "uuid": "^8.0.0"
   },
   "dependencies": {
