--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.0.0",
     "@khanacademy/tota11y": "^0.2.0",
+    "@lerna/global-options": "^3.13.0",
     "@octokit/rest": "^18.0.0",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-json": "^4.0.3",
@@ -90,7 +91,7 @@
   "dependencies": {
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
-    "tslib": "^1.13.0"
+    "tslib": "^2.0.3"
   },
   "lint-staged": {
     "packages/**/*.ts": [
@@ -160,6 +161,7 @@
     "release:publish-retry": "lerna publish from-package --no-git-tag-version --no-push --yes",
     "postinstall": "npm run bootstrap",
     "bootstrap": "lerna bootstrap",
+    "bootstrap:debug": "lerna bootstrap --loglevel verbose",
     "precommit": "lint-staged",
     "y:link:hub": "lerna run y:link:hub",
     "y:unlink:hub": "lerna run y:unlink:hub && npm install"
