--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -21,7 +21,7 @@
     "@esri/hub-common": "^6.20.1",
     "@types/adlib": "^3.0.1",
     "rollup": "^1.22.0",
-    "typescript": "4.0.5"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "^2.24.0",
