--- a/demos/package.json
+++ b/demos/package.json
@@ -11,6 +11,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@esri/arcgis-html-sanitizer": "^2.5.0",
     "@esri/arcgis-rest-auth": "^3.0.0",
     "@esri/arcgis-rest-feature-layer": "^3.0.0",
     "@esri/arcgis-rest-portal": "^3.0.0",
