--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-typescript": "^8.2.0",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@types/fetch-mock": "^7.3.2",
     "@types/jasmine": "^3.6.1",
@@ -75,7 +76,7 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.25.3",
+    "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-uglify": "^3.0.0",
     "semantic-release": "^17.2.3",
     "shelljs": "^0.7.8",
@@ -84,13 +85,13 @@
     "sri-toolbox": "0.2.0",
     "ts-node": "^8.3.0",
     "typedoc": "^0.19.2",
-    "typescript": "^4.1.3",
+    "typescript": "^4.0.5",
     "uuid": "^8.0.0"
   },
   "dependencies": {
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
-    "tslib": "^1.13.0"
+    "tslib": "^2.1.0"
   },
   "lint-staged": {
     "packages/**/*.ts": [
