--- a/demos/package.json
+++ b/demos/package.json
@@ -12,26 +12,27 @@
   },
   "dependencies": {
     "@esri/arcgis-html-sanitizer": "^2.5.0",
-    "@esri/arcgis-rest-auth": "^3.0.2",
-    "@esri/arcgis-rest-feature-layer": "^3.0.2",
-    "@esri/arcgis-rest-portal": "^3.0.2",
-    "@esri/arcgis-rest-request": "^3.0.2",
-    "@esri/arcgis-rest-service-admin": "^3.0.2",
-    "@esri/hub-common": "^7.0.8",
-    "@esri/hub-initiatives": "^7.0.8",
-    "@esri/hub-sites": "^7.0.8",
-    "@esri/hub-teams": "^7.0.8",
-    "@esri/solution-common": "^0.22.3",
-    "@esri/solution-creator": "^0.22.3",
-    "@esri/solution-deployer": "^0.22.3",
-    "@esri/solution-feature-layer": "^0.22.3",
-    "@esri/solution-file": "^0.22.3",
-    "@esri/solution-form": "^0.22.3",
-    "@esri/solution-group": "^0.22.3",
-    "@esri/solution-hub-types": "^0.22.3",
-    "@esri/solution-simple-types": "^0.22.3",
-    "@esri/solution-storymap": "^0.22.3",
-    "@esri/solution-web-experience": "^0.22.3",
+    "@esri/arcgis-rest-auth": "^3.0.3",
+    "@esri/arcgis-rest-feature-layer": "^3.0.3",
+    "@esri/arcgis-rest-portal": "^3.0.3",
+    "@esri/arcgis-rest-request": "^3.0.3",
+    "@esri/arcgis-rest-service-admin": "^3.0.3",
+    "@esri/hub-common": "^7.3.0",
+    "@esri/hub-initiatives": "^7.3.0",
+    "@esri/hub-sites": "^7.3.0",
+    "@esri/hub-teams": "^7.3.0",
+    "@esri/solution-common": "^0.22.4",
+    "@esri/solution-creator": "^0.22.4",
+    "@esri/solution-deployer": "^0.22.4",
+    "@esri/solution-feature-layer": "^0.22.4",
+    "@esri/solution-file": "^0.22.4",
+    "@esri/solution-form": "^0.22.4",
+    "@esri/solution-group": "^0.22.4",
+    "@esri/solution-hub-types": "^0.22.4",
+    "@esri/solution-simple-types": "^0.22.4",
+    "@esri/solution-storymap": "^0.22.4",
+    "@esri/solution-viewer": "^0.22.4",
+    "@esri/solution-web-experience": "^0.22.4",
     "adlib": "3.0.7"
   },
   "scripts": {
