--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -19,6 +19,7 @@
     "@esri/arcgis-rest-request": "^3.0.5",
     "@esri/arcgis-rest-service-admin": "^3.0.5",
     "@esri/hub-common": "^8.3.1",
+    "@esri/hub-sites": "^8.3.1",
     "@types/adlib": "^3.0.1",
     "rollup": "^1.22.0",
     "typescript": "^4.1.3"
@@ -29,7 +30,8 @@
     "@esri/arcgis-rest-portal": "^3.0.5",
     "@esri/arcgis-rest-request": "^3.0.5",
     "@esri/arcgis-rest-service-admin": "^3.0.5",
-    "@esri/hub-common": "^8.3.1"
+    "@esri/hub-common": "^8.3.1",
+    "@esri/hub-sites": "^8.3.1"
   },
   "dependencies": {
     "@esri/arcgis-html-sanitizer": "~2.1.0",
