--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,8 +18,10 @@
     "@esri/arcgis-rest-portal": "^3.0.5",
     "@esri/arcgis-rest-request": "^3.0.5",
     "@esri/arcgis-rest-service-admin": "^3.0.5",
-    "@esri/hub-common": "^8.3.1",
-    "@esri/hub-sites": "^8.3.1",
+    "@esri/hub-common": "^8.4.0",
+    "@esri/hub-initiatives": "^8.4.0",
+    "@esri/hub-sites": "^8.4.0",
+    "@esri/hub-teams": "^8.4.0",
     "@types/adlib": "^3.0.1",
     "rollup": "^1.22.0",
     "typescript": "^4.1.3"
@@ -30,8 +32,10 @@
     "@esri/arcgis-rest-portal": "^3.0.5",
     "@esri/arcgis-rest-request": "^3.0.5",
     "@esri/arcgis-rest-service-admin": "^3.0.5",
-    "@esri/hub-common": "^8.3.1",
-    "@esri/hub-sites": "^8.3.1"
+    "@esri/hub-common": "^8.4.0",
+    "@esri/hub-initiatives": "^8.4.0",
+    "@esri/hub-sites": "^8.4.0",
+    "@esri/hub-teams": "^8.4.0"
   },
   "dependencies": {
     "@esri/arcgis-html-sanitizer": "~2.1.0",
