--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -13,6 +13,7 @@
     "dist/**"
   ],
   "devDependencies": {
+    "@esri/arcgis-html-sanitizer": "~2.5.0",
     "@esri/arcgis-rest-auth": "^3.0.5",
     "@esri/arcgis-rest-feature-layer": "^3.0.5",
     "@esri/arcgis-rest-portal": "^3.0.5",
@@ -43,7 +44,7 @@
     "adlib": "3.0.7",
     "jszip": "3.6.0",
     "lodash.isplainobject": "^4.0.6",
-    "tslib": "^1.13.0",
+    "tslib": "^1.14.1",
     "xss": "^1.0.6"
   },
   "scripts": {
