--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "sri-toolbox": "0.2.0",
     "ts-node": "^8.3.0",
     "typedoc": "^0.20.36",
-    "typescript": "^4.1.4",
+    "typescript": "^4.3.4",
     "uuid": "^8.0.0"
   },
   "dependencies": {
@@ -202,6 +202,7 @@
   },
   "volta": {
     "node": "14.15.5",
-    "npm": "6.14.11"
+    "npm": "6.14.11",
+    "typescript": "4.3.4"
   }
 }
