--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -23,8 +23,7 @@
     "@esri/hub-sites": "^8.5.1",
     "@esri/hub-teams": "^8.5.1",
     "@types/adlib": "^3.0.1",
-    "rollup": "^1.22.0",
-    "typescript": "^4.1.3"
+    "rollup": "^1.22.0"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "^3.1.1",
