--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -46,6 +46,7 @@
     "@esri/solution-simple-types": "^0.24.0",
     "@esri/solution-storymap": "^0.24.0",
     "@esri/solution-web-experience": "^0.24.0",
+    "@esri/solution-velocity": "^0.24.0",
     "tslib": "^1.13.0"
   },
   "scripts": {
