--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -45,6 +45,7 @@
     "@esri/solution-hub-types": "^0.24.0",
     "@esri/solution-simple-types": "^0.24.0",
     "@esri/solution-storymap": "^0.24.0",
+    "@esri/solution-velocity": "^0.24.0",
     "@esri/solution-web-experience": "^0.24.0",
     "tslib": "^1.13.0"
   },
