--- a/package.json
+++ b/package.json
@@ -147,7 +147,8 @@
     "release:prepare1": "git fetch --all && npm run clean && lerna bootstrap && npm run clean:src && npm test",
     "release:prepare2": "lerna publish --no-git-tag-version --no-push --skip-npm --yes && node ./support/changelog.js",
     "release:review": "git --no-pager diff --word-diff",
-    "release:publish": "bash ./support/publish.sh",
+    "release:publish-git": "bash ./support/publish.sh",
+    "release:publish-npm": "lerna publish from-package --force-publish=* --no-git-tag-version --no-push --yes",
     "release:publish-retry": "lerna publish from-package --no-git-tag-version --no-push --yes",
     "postinstall": "npm run bootstrap",
     "bootstrap": "lerna bootstrap",
