--- a/demos/package.json
+++ b/demos/package.json
@@ -13,15 +13,15 @@
   },
   "dependencies": {
     "@esri/arcgis-html-sanitizer": "^2.5.0",
-    "@esri/arcgis-rest-auth": "^3.3.1",
-    "@esri/arcgis-rest-feature-layer": "^3.3.1",
-    "@esri/arcgis-rest-portal": "^3.3.1",
-    "@esri/arcgis-rest-request": "^3.3.1",
-    "@esri/arcgis-rest-service-admin": "^3.3.1",
-    "@esri/hub-common": "^8.22.1",
-    "@esri/hub-initiatives": "^8.22.1",
-    "@esri/hub-sites": "^8.22.1",
-    "@esri/hub-teams": "^8.22.1",
+    "@esri/arcgis-rest-auth": "3.4.1",
+    "@esri/arcgis-rest-feature-layer": "3.4.1",
+    "@esri/arcgis-rest-portal": "3.4.1",
+    "@esri/arcgis-rest-request": "3.4.1",
+    "@esri/arcgis-rest-service-admin": "3.4.1",
+    "@esri/hub-common": "8.23.0",
+    "@esri/hub-initiatives": "8.23.0",
+    "@esri/hub-sites": "8.23.0",
+    "@esri/hub-teams": "8.23.0",
     "@esri/solution-common": "^1.1.2",
     "@esri/solution-creator": "^1.1.2",
     "@esri/solution-deployer": "^1.1.2",
