--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -13,28 +13,28 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "^3.3.1",
-    "@esri/arcgis-rest-feature-layer": "^3.3.1",
-    "@esri/arcgis-rest-portal": "^3.3.1",
-    "@esri/arcgis-rest-request": "^3.3.1",
-    "@esri/arcgis-rest-service-admin": "^3.3.1",
-    "@esri/hub-common": "^8.22.1",
-    "@esri/hub-initiatives": "^8.22.1",
-    "@esri/hub-sites": "^8.22.1",
-    "@esri/hub-teams": "^8.22.1",
+    "@esri/arcgis-rest-auth": "3.4.1",
+    "@esri/arcgis-rest-feature-layer": "3.4.1",
+    "@esri/arcgis-rest-portal": "3.4.1",
+    "@esri/arcgis-rest-request": "3.4.1",
+    "@esri/arcgis-rest-service-admin": "3.4.1",
+    "@esri/hub-common": "8.23.0",
+    "@esri/hub-initiatives": "8.23.0",
+    "@esri/hub-sites": "8.23.0",
+    "@esri/hub-teams": "8.23.0",
     "rollup": "^1.22.0",
     "typescript": "^4.3.4"
   },
   "peerDependencies": {
-    "@esri/arcgis-rest-auth": "^3.3.1",
-    "@esri/arcgis-rest-feature-layer": "^3.3.1",
-    "@esri/arcgis-rest-portal": "^3.3.1",
-    "@esri/arcgis-rest-request": "^3.3.1",
-    "@esri/arcgis-rest-service-admin": "^3.3.1",
-    "@esri/hub-common": "^8.22.1",
-    "@esri/hub-initiatives": "^8.22.1",
-    "@esri/hub-sites": "^8.22.1",
-    "@esri/hub-teams": "^8.22.1"
+    "@esri/arcgis-rest-auth": "3.4.1",
+    "@esri/arcgis-rest-feature-layer": "3.4.1",
+    "@esri/arcgis-rest-portal": "3.4.1",
+    "@esri/arcgis-rest-request": "3.4.1",
+    "@esri/arcgis-rest-service-admin": "3.4.1",
+    "@esri/hub-common": "8.23.0",
+    "@esri/hub-initiatives": "8.23.0",
+    "@esri/hub-sites": "8.23.0",
+    "@esri/hub-teams": "8.23.0"
   },
   "dependencies": {
     "@esri/solution-common": "^1.1.2",
