--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -13,18 +13,18 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "^3.3.1",
-    "@esri/arcgis-rest-portal": "^3.3.1",
-    "@esri/arcgis-rest-request": "^3.3.1",
-    "@esri/hub-common": "^8.22.1",
+    "@esri/arcgis-rest-auth": "3.4.1",
+    "@esri/arcgis-rest-portal": "3.4.1",
+    "@esri/arcgis-rest-request": "3.4.1",
+    "@esri/hub-common": "8.23.0",
     "rollup": "^1.22.0",
     "typescript": "^4.3.4"
   },
   "peerDependencies": {
-    "@esri/arcgis-rest-auth": "^3.3.1",
-    "@esri/arcgis-rest-portal": "^3.3.1",
-    "@esri/arcgis-rest-request": "^3.3.1",
-    "@esri/hub-common": "^8.22.1"
+    "@esri/arcgis-rest-auth": "3.4.1",
+    "@esri/arcgis-rest-portal": "3.4.1",
+    "@esri/arcgis-rest-request": "3.4.1",
+    "@esri/hub-common": "8.23.0"
   },
   "dependencies": {
     "@esri/solution-common": "^1.1.2",
