--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsdoc": "^37.0.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "event-stream": "4.0.1",
+    "event-stream": "^4.0.1",
     "fetch-mock": "^7.7.3",
     "gh-pages": "^3.2.3",
     "gh-release": "^6.0.1",
@@ -75,7 +75,7 @@
     "sinon": "^12.0.1",
     "slug": "^5.1.0",
     "sri-toolbox": "0.2.0",
-    "ts-node": "^8.3.0",
+    "ts-node": "^10.4.0",
     "typedoc": "^0.22.9",
     "typescript": "^4.4.4",
     "uuid": "^8.0.0"
@@ -83,7 +83,7 @@
   "dependencies": {
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
-    "tslib": "^1.13.0"
+    "tslib": "1.13.0"
   },
   "lint-staged": {
     "packages/**/*.ts": [
