--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -42,7 +42,7 @@
     "adlib": "3.0.7",
     "jszip": "3.7.1",
     "lodash.isplainobject": "^4.0.6",
-    "tslib": "^1.13.0",
+    "tslib": "1.13.0",
     "xss": "^1.0.6"
   },
   "scripts": {
