--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -47,7 +47,7 @@
     "@esri/solution-storymap": "^1.1.5",
     "@esri/solution-velocity": "^1.1.5",
     "@esri/solution-web-experience": "^1.1.5",
-    "tslib": "^1.13.0"
+    "tslib": "1.13.0"
   },
   "scripts": {
     "prepare": "npm run build",
