--- a/packages/file/package.json
+++ b/packages/file/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "@esri/solution-common": "^1.1.5",
-    "tslib": "^1.13.0"
+    "tslib": "1.13.0"
   },
   "scripts": {
     "prepare": "npm run build",
