--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -43,7 +43,7 @@
     "@esri/solution-group": "^1.1.5",
     "@esri/solution-simple-types": "^1.1.5",
     "@esri/solution-storymap": "^1.1.5",
-    "tslib": "^1.13.0"
+    "tslib": "1.13.0"
   },
   "scripts": {
     "prepare": "npm run build",
