--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -37,7 +37,7 @@
     "@esri/solution-feature-layer": "^1.1.5",
     "@esri/solution-file": "^1.1.5",
     "@esri/solution-group": "^1.1.5",
-    "tslib": "^1.13.0"
+    "tslib": "1.13.0"
   },
   "scripts": {
     "prepare": "npm run build",
