--- a/packages/web-experience/package.json
+++ b/packages/web-experience/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@esri/solution-common": "^1.1.5",
     "@esri/solution-simple-types": "^1.1.5",
-    "tslib": "^1.13.0"
+    "tslib": "1.13.0"
   },
   "scripts": {
     "prepare": "npm run build",
