Removed test config from base tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": false,
-    "target": "es2020",
-    "types": ["node", "jasmine"]
+    "target": "es2020"
   },
   "exclude": [
     "node_modules"
