--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -16,14 +16,14 @@
     "@esri/arcgis-rest-auth": "3.4.3",
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
-    "@esri/hub-common": "9.29.0",
+    "@esri/hub-common": "^10.0.0-next.3",
     "rollup": "2.66.1"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "3.4.3",
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
-    "@esri/hub-common": "9.29.0"
+    "@esri/hub-common": "^10.0.0-next.3"
   },
   "dependencies": {
     "@esri/solution-common": "^1.3.16",
