--- a/package.json
+++ b/package.json
@@ -67,18 +67,19 @@
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@types/fetch-mock": "^7.3.5",
     "@types/jasmine": "^4.3.0",
-    "@types/node": "^18.7.21",
+    "@types/node": "^18.8.3",
     "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.35.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.39.0",
     "@typescript-eslint/parser": "^5.38.0",
     "acorn": "^8.8.0",
     "acorn-walk": "^8.2.0",
+    "adlib": "^3.0.8",
     "changelog-parser": "^2.8.1",
     "cheerio": "^1.0.0-rc.12",
     "codecov": "^3.8.2",
     "concurrently": "^7.3.0",
-    "core-js": "^3.25.3",
+    "core-js": "^3.25.5",
     "coveralls": "^3.1.1",
     "cpx": "^1.5.0",
     "cross-spawn": "^7.0.3",
@@ -109,7 +110,7 @@
     "karma-spec-reporter": "0.0.34",
     "karma-typescript": "^5.5.3",
     "karma-typescript-es6-transform": "^5.5.3",
-    "lerna": "^5.5.4",
+    "lerna": "^5.6.2",
     "lint-staged": "^13.0.3",
     "marked": "^4.0.19",
     "minimatch": "^5.1.0",
