Copy QuickCapture resources

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:umd": "lerna run build:umd",
     "clean": "npm run clean:src && npm run clean:dist",
     "clean:src": "rm -rf packages/*/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/{src,test}/**/*.{d.ts,js,js.map} && find demos/{src,dist}/*.{d.ts,js,js.map} -type f -not -wholename 'demos/src/*.min.js' -delete",
-    "clean:dist": "rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
+    "clean:dist": "rm -rf demos/dist/ && rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
     "deepclean": "rm -rf ./node_modules && rm -rf ./demos/node_modules && rm -rf packages/*/node_modules && npm run clean",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
