Convert getItemInfo demo to webpack

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
   "packages": [
     "packages/**",
-    "demos/compareJSON"
+    "demos/compareJSON",
+    "demos/getItemInfo"
   ],
   "version": "1.7.0"
 }
