Convert copySolutions demo to webpack

--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,7 @@
   "packages": [
     "packages/**",
     "demos/compareJSON",
+    "demos/copySolutions",
     "demos/getItemInfo"
   ],
   "version": "1.7.0"
