--- a/demos/copySolutions/package.json
+++ b/demos/copySolutions/package.json
@@ -1,6 +1,5 @@
 {
   "name": "copySolutions",
-  "private": true,
   "version": "2.0.0-alpha.0",
   "description": "copySolutions demo",
   "author": "",
@@ -13,11 +12,11 @@
   },
   "devDependencies": {
     "@esri/arcgis-html-sanitizer": "3.0.1",
-    "@esri/arcgis-rest-auth": "3.5.0",
-    "@esri/arcgis-rest-feature-layer": "3.5.0",
-    "@esri/arcgis-rest-portal": "3.5.0",
-    "@esri/arcgis-rest-request": "3.5.0",
-    "@esri/arcgis-rest-service-admin": "3.5.0",
+    "@esri/arcgis-rest-auth": "~3.5.0",
+    "@esri/arcgis-rest-feature-layer": "~3.5.0",
+    "@esri/arcgis-rest-portal": "~3.5.0",
+    "@esri/arcgis-rest-request": "~3.5.0",
+    "@esri/arcgis-rest-service-admin": "~3.5.0",
     "@esri/hub-common": "^12.14.0",
     "@esri/hub-initiatives": "^12.4.1",
     "@esri/hub-sites": "^12.5.0",
