--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -13,11 +13,11 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "3.5.0",
-    "@esri/arcgis-rest-feature-layer": "3.5.0",
-    "@esri/arcgis-rest-portal": "3.5.1",
-    "@esri/arcgis-rest-request": "3.5.0",
-    "@esri/arcgis-rest-service-admin": "3.5.0",
+    "@esri/arcgis-rest-auth": "~3.5.0",
+    "@esri/arcgis-rest-feature-layer": "~3.5.0",
+    "@esri/arcgis-rest-portal": "~3.5.0",
+    "@esri/arcgis-rest-request": "~3.5.0",
+    "@esri/arcgis-rest-service-admin": "~3.5.0",
     "@esri/hub-common": "^12.14.0",
     "@esri/hub-initiatives": "^12.4.1",
     "@esri/hub-sites": "^12.5.0",
@@ -35,11 +35,11 @@
     "rollup": "2.79.1"
   },
   "peerDependencies": {
-    "@esri/arcgis-rest-auth": "3.5.0",
-    "@esri/arcgis-rest-feature-layer": "3.5.0",
-    "@esri/arcgis-rest-portal": "3.5.1",
-    "@esri/arcgis-rest-request": "3.5.0",
-    "@esri/arcgis-rest-service-admin": "3.5.0",
+    "@esri/arcgis-rest-auth": "~3.5.0",
+    "@esri/arcgis-rest-feature-layer": "~3.5.0",
+    "@esri/arcgis-rest-portal": "~3.5.0",
+    "@esri/arcgis-rest-request": "~3.5.0",
+    "@esri/arcgis-rest-service-admin": "~3.5.0",
     "@esri/hub-common": "^12.14.0",
     "@esri/hub-initiatives": "^12.4.1",
     "@esri/hub-sites": "^12.5.0",
@@ -99,5 +99,5 @@
     "esri",
     "ES6"
   ],
-  "gitHead": "90abda2458189857c45459ec57acea8453ec77f3"
+  "gitHead": "307c2c0acc4e556757826f20434c6ba33f8e2f9f"
 }
