--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -13,17 +13,17 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "3.5.0",
-    "@esri/arcgis-rest-portal": "3.5.1",
-    "@esri/arcgis-rest-request": "3.5.0",
+    "@esri/arcgis-rest-auth": "~3.5.0",
+    "@esri/arcgis-rest-portal": "~3.5.0",
+    "@esri/arcgis-rest-request": "~3.5.0",
     "@esri/hub-common": "^12.14.0",
     "@esri/solution-common": "^2.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
-    "@esri/arcgis-rest-auth": "3.5.0",
-    "@esri/arcgis-rest-portal": "3.5.1",
-    "@esri/arcgis-rest-request": "3.5.0",
+    "@esri/arcgis-rest-auth": "~3.5.0",
+    "@esri/arcgis-rest-portal": "~3.5.0",
+    "@esri/arcgis-rest-request": "~3.5.0",
     "@esri/hub-common": "^12.14.0"
   },
   "dependencies": {
@@ -80,5 +80,5 @@
     "esri",
     "ES6"
   ],
-  "gitHead": "90abda2458189857c45459ec57acea8453ec77f3"
+  "gitHead": "307c2c0acc4e556757826f20434c6ba33f8e2f9f"
 }
