--- a/packages/velocity/package.json
+++ b/packages/velocity/package.json
@@ -13,21 +13,21 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "3.5.0",
-    "@esri/arcgis-rest-feature-layer": "3.5.0",
-    "@esri/arcgis-rest-portal": "3.5.1",
-    "@esri/arcgis-rest-request": "3.5.0",
-    "@esri/arcgis-rest-service-admin": "3.5.0",
+    "@esri/arcgis-rest-auth": "~3.5.0",
+    "@esri/arcgis-rest-feature-layer": "~3.5.0",
+    "@esri/arcgis-rest-portal": "~3.5.0",
+    "@esri/arcgis-rest-request": "~3.5.0",
+    "@esri/arcgis-rest-service-admin": "~3.5.0",
     "@esri/solution-common": "^2.0.0-alpha.0",
     "@esri/solution-simple-types": "^2.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
-    "@esri/arcgis-rest-auth": "3.5.0",
-    "@esri/arcgis-rest-feature-layer": "3.5.0",
-    "@esri/arcgis-rest-portal": "3.5.1",
-    "@esri/arcgis-rest-request": "3.5.0",
-    "@esri/arcgis-rest-service-admin": "3.5.0"
+    "@esri/arcgis-rest-auth": "~3.5.0",
+    "@esri/arcgis-rest-feature-layer": "~3.5.0",
+    "@esri/arcgis-rest-portal": "~3.5.0",
+    "@esri/arcgis-rest-request": "~3.5.0",
+    "@esri/arcgis-rest-service-admin": "~3.5.0"
   },
   "dependencies": {
     "tslib": "1.14.1"
@@ -76,5 +76,5 @@
     "esri",
     "ES6"
   ],
-  "gitHead": "90abda2458189857c45459ec57acea8453ec77f3"
+  "gitHead": "307c2c0acc4e556757826f20434c6ba33f8e2f9f"
 }
