Remove umd & node builds

--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
   },
   "scripts": {
     "start:deployer": "lerna run build && http-server ./demos/deploySolution",
-    "build": "lerna run build",
-    "build:umd": "lerna run build:umd",
-    "clean": "npm run clean:src && npm run clean:dist",
-    "clean:src": "rm -rf packages/*/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/{src,test}/**/*.{d.ts,js,js.map} && find demos/{src,dist}/*.{d.ts,js,js.map} -type f -not -wholename 'demos/src/*.min.js' -delete",
-    "clean:dist": "rm -rf demos/dist/ && rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
+    "build": "lerna run build:esm",
+    "clean:src": "rm -rf packages/*/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/{src,test}/**/*.{d.ts,js,js.map} && find demos/**/src/*.d.ts -type f -delete",
+    "clean:dist": "rm -rf demos/**/dist/ && rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
     "deepclean": "rm -rf ./node_modules && rm -rf ./demos/node_modules && rm -rf packages/*/node_modules && npm run clean",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
