--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -41,13 +41,8 @@
   },
   "scripts": {
     "prepare": "npm run build",
-    "build": "npm run build:node && npm run build:umd && npm run build:esm",
-    "build:esm": "tsc -p ./tsconfig.json --module esnext --outDir ./dist/esm --declaration",
-    "build:umd": "rollup -c ../../umd-base-profile.js && rollup -c ../../umd-production-profile.js",
-    "build:node": "tsc -p ./tsconfig.json --module commonjs --outDir ./dist/node",
-    "dev:esm": "tsc -w --module esnext --outDir ./dist/esm --declaration",
-    "dev:umd": "rollup -w -c ../../umd-base-profile.js",
-    "dev:node": "tsc -w --module commonjs --outDir ./dist/node",
+    "build": "tsc -p ./tsconfig.json --module esnext --outDir ./dist/esm --declaration",
+    "build:dev": "tsc -w --module esnext --outDir ./dist/esm --declaration",
     "getupdates": "npm-check-updates --upgrade",
     "test:chrome": "karma start --single-run --browsers=Chrome",
     "test:node": "jasmine --config=../../jasmine.json",
