--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -16,17 +16,16 @@
     "@esri/arcgis-rest-auth": "~3.5.0",
     "@esri/arcgis-rest-portal": "~3.5.0",
     "@esri/arcgis-rest-request": "~3.5.0",
-    "@esri/hub-common": "^12.14.0",
     "@esri/solution-common": "^2.0.2-alpha.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "~3.5.0",
     "@esri/arcgis-rest-portal": "~3.5.0",
-    "@esri/arcgis-rest-request": "~3.5.0",
-    "@esri/hub-common": "^12.14.0"
+    "@esri/arcgis-rest-request": "~3.5.0"
   },
   "dependencies": {
+    "@esri/hub-common": "^12.31.1",
     "tslib": "1.14.1"
   },
   "scripts": {
