--- a/packages/web-experience/package.json
+++ b/packages/web-experience/package.json
@@ -18,8 +18,6 @@
     "@esri/arcgis-rest-portal": "~3.5.0",
     "@esri/arcgis-rest-request": "~3.5.0",
     "@esri/arcgis-rest-service-admin": "~3.5.0",
-    "@esri/hub-common": "^12.14.0",
-    "@esri/hub-initiatives": "^12.4.1",
     "@esri/solution-common": "^2.0.2-alpha.0",
     "@esri/solution-simple-types": "^2.0.2-alpha.0",
     "rollup": "2.79.1"
@@ -29,11 +27,11 @@
     "@esri/arcgis-rest-feature-layer": "~3.5.0",
     "@esri/arcgis-rest-portal": "~3.5.0",
     "@esri/arcgis-rest-request": "~3.5.0",
-    "@esri/arcgis-rest-service-admin": "~3.5.0",
-    "@esri/hub-common": "^12.14.0",
-    "@esri/hub-initiatives": "^12.4.1"
+    "@esri/arcgis-rest-service-admin": "~3.5.0"
   },
   "dependencies": {
+    "@esri/hub-common": "^12.31.1",
+    "@esri/hub-initiatives": "^12.4.1",
     "tslib": "1.14.1"
   },
   "scripts": {
