--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -32,7 +32,8 @@
     "@esri/solution-storymap": "^4.0.0",
     "@esri/solution-velocity": "^4.0.0",
     "@esri/solution-web-experience": "^4.0.0",
-    "rollup": "2.79.1"
+    "rollup": "2.79.1",
+    "sinon": "^15.1.0"
   },
   "dependencies": {
     "@esri/arcgis-rest-types": "^3.6.0",
