--- a/demos/createSolution/package.json
+++ b/demos/createSolution/package.json
@@ -1,6 +1,6 @@
 {
   "name": "createSolution",
-  "version": "4.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "createSolution demo",
   "author": "Esri",
   "license": "Apache-2.0",
@@ -21,19 +21,19 @@
     "@esri/hub-initiatives": "^12.4.1",
     "@esri/hub-sites": "^12.6.0",
     "@esri/hub-teams": "^12.4.1",
-    "@esri/solution-common": "^4.0.0",
-    "@esri/solution-creator": "^4.0.0",
-    "@esri/solution-deployer": "^4.0.0",
-    "@esri/solution-feature-layer": "^4.0.0",
-    "@esri/solution-file": "^4.0.0",
-    "@esri/solution-form": "^4.0.0",
-    "@esri/solution-group": "^4.0.0",
-    "@esri/solution-hub-types": "^4.0.0",
-    "@esri/solution-simple-types": "^4.0.0",
-    "@esri/solution-storymap": "^4.0.0",
-    "@esri/solution-velocity": "^4.0.0",
-    "@esri/solution-viewer": "^4.0.0",
-    "@esri/solution-web-experience": "^4.0.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
+    "@esri/solution-creator": "^4.0.0-alpha.0",
+    "@esri/solution-deployer": "^4.0.0-alpha.0",
+    "@esri/solution-feature-layer": "^4.0.0-alpha.0",
+    "@esri/solution-file": "^4.0.0-alpha.0",
+    "@esri/solution-form": "^4.0.0-alpha.0",
+    "@esri/solution-group": "^4.0.0-alpha.0",
+    "@esri/solution-hub-types": "^4.0.0-alpha.0",
+    "@esri/solution-simple-types": "^4.0.0-alpha.0",
+    "@esri/solution-storymap": "^4.0.0-alpha.0",
+    "@esri/solution-velocity": "^4.0.0-alpha.0",
+    "@esri/solution-viewer": "^4.0.0-alpha.0",
+    "@esri/solution-web-experience": "^4.0.0-alpha.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
