--- a/demos/deleteSolution/package.json
+++ b/demos/deleteSolution/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deleteSolution",
-  "version": "4.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "deleteSolution demo",
   "author": "Esri",
   "license": "Apache-2.0",
@@ -21,7 +21,7 @@
     "@esri/hub-initiatives": "^12.4.1",
     "@esri/hub-sites": "^12.6.0",
     "@esri/hub-teams": "^12.4.1",
-    "@esri/solution-common": "^4.0.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
