--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-deployer",
-  "version": "4.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Manages the deployment of a Solution for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/deployer.umd.min.js",
@@ -22,16 +22,16 @@
     "@esri/hub-initiatives": "^12.4.1",
     "@esri/hub-sites": "^12.6.0",
     "@esri/hub-teams": "^12.4.1",
-    "@esri/solution-common": "^4.0.0",
-    "@esri/solution-feature-layer": "^4.0.0",
-    "@esri/solution-file": "^4.0.0",
-    "@esri/solution-form": "^4.0.0",
-    "@esri/solution-group": "^4.0.0",
-    "@esri/solution-hub-types": "^4.0.0",
-    "@esri/solution-simple-types": "^4.0.0",
-    "@esri/solution-storymap": "^4.0.0",
-    "@esri/solution-velocity": "^4.0.0",
-    "@esri/solution-web-experience": "^4.0.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
+    "@esri/solution-feature-layer": "^4.0.0-alpha.0",
+    "@esri/solution-file": "^4.0.0-alpha.0",
+    "@esri/solution-form": "^4.0.0-alpha.0",
+    "@esri/solution-group": "^4.0.0-alpha.0",
+    "@esri/solution-hub-types": "^4.0.0-alpha.0",
+    "@esri/solution-simple-types": "^4.0.0-alpha.0",
+    "@esri/solution-storymap": "^4.0.0-alpha.0",
+    "@esri/solution-velocity": "^4.0.0-alpha.0",
+    "@esri/solution-web-experience": "^4.0.0-alpha.0",
     "rollup": "2.79.1",
     "sinon": "^15.1.0"
   },
