--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-storymap",
-  "version": "4.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Manages the creation and deployment of Story Map item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/storymap.umd.min.js",
@@ -18,7 +18,7 @@
     "@esri/arcgis-rest-portal": "~3.5.0",
     "@esri/arcgis-rest-request": "~3.5.0",
     "@esri/hub-common": "^12.41.0",
-    "@esri/solution-common": "^4.0.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "dependencies": {
