--- a/packages/web-experience/package.json
+++ b/packages/web-experience/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-web-experience",
-  "version": "4.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Manages the creation and deployment of Web Experience item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/web-experience.umd.min.js",
@@ -20,8 +20,8 @@
     "@esri/arcgis-rest-service-admin": "~3.5.0",
     "@esri/hub-common": "^12.41.0",
     "@esri/hub-initiatives": "^12.4.1",
-    "@esri/solution-common": "^4.0.0",
-    "@esri/solution-simple-types": "^4.0.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
+    "@esri/solution-simple-types": "^4.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "dependencies": {
