Set up ultra package builds

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,9 @@ __*.*
 __*
 .vscode/
 
+# Prevent caches from ultra runner
+**/.ultra.cache.json
+
 # Temporary build products
 demos/**/*.js
 !demos/**/webpack.config.js
