--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -2,10 +2,15 @@
   "name": "@esri/solution-deployer",
   "version": "4.1.0",
   "description": "Manages the deployment of a Solution for @esri/solution.js.",
-  "main": "dist/node/index.js",
-  "unpkg": "dist/umd/deployer.umd.min.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "js:next": "dist/esm/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "types": "dist/esm/index.d.ts",
   "author": "Esri",
   "license": "Apache-2.0",
@@ -39,9 +44,15 @@
     "tslib": "1.14.1"
   },
   "scripts": {
-    "prepare": "npm run build",
-    "build": "tsc -p ./tsconfig.json --module esnext --outDir ./dist/esm --declaration",
-    "build:dev": "tsc -w --module esnext --outDir ./dist/esm --declaration",
+    "build": "npm-run-all --parallel build:*",
+    "postbuild": "node ../../scripts/create-dist-package-jsons.mjs",
+    "build:cjs": "tsc --outDir ./dist/cjs -m commonjs",
+    "postbuild:cjs": "node ../../scripts/create-dist-package-jsons.mjs",
+    "build:esm": "tsc --outDir ./dist/esm --declaration",
+    "postbuild:esm": "node ../../scripts/create-dist-package-jsons.mjs",
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:cjs": "tsc -w --outDir ./dist/cjs -m commonjs",
+    "dev:esm": "tsc -w --outDir ./dist/esm --declaration",
     "getupdates": "npm-check-updates --upgrade"
   },
   "publishConfig": {
