--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -2,10 +2,15 @@
   "name": "@esri/solution-hub-types",
   "version": "4.1.0",
   "description": "Manages the creation and deployment of Hub Site and Hub Page item types for @esri/solution.js.",
-  "main": "dist/node/index.js",
-  "unpkg": "dist/umd/hub-types.umd.min.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "js:next": "dist/esm/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "types": "dist/esm/index.d.ts",
   "author": "Esri",
   "license": "Apache-2.0",
@@ -29,14 +34,16 @@
     "tslib": "1.14.1"
   },
   "scripts": {
-    "prepare": "npm run build",
-    "build": "tsc -p ./tsconfig.json --module esnext --outDir ./dist/esm --declaration",
-    "build:dev": "tsc -w --module esnext --outDir ./dist/esm --declaration",
-    "getupdates": "npm-check-updates --upgrade",
-    "test:chrome": "karma start --single-run --browsers=Chrome",
-    "test:node": "jasmine --config=../../jasmine.json",
-    "y:link:hub": "yalc link @esri/hub-common && yalc link @esri/hub-sites",
-    "y:unlink:hub": "yalc remove @esri/hub-common && yalc remove @esri/hub-sites"
+    "build": "npm-run-all --parallel build:*",
+    "postbuild": "node ../../scripts/create-dist-package-jsons.mjs",
+    "build:cjs": "tsc --outDir ./dist/cjs -m commonjs",
+    "postbuild:cjs": "node ../../scripts/create-dist-package-jsons.mjs",
+    "build:esm": "tsc --outDir ./dist/esm --declaration",
+    "postbuild:esm": "node ../../scripts/create-dist-package-jsons.mjs",
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:cjs": "tsc -w --outDir ./dist/cjs -m commonjs",
+    "dev:esm": "tsc -w --outDir ./dist/esm --declaration",
+    "getupdates": "npm-check-updates --upgrade"
   },
   "publishConfig": {
     "access": "public"
